# Pac-Man

./: .gitignore  Makefile  config.json  mazegenerator-2.0.2-py3-none-any.whl  pyproject.toml
src/: __main__.py
src/gameplay/: Gameplay.py  __init__.py
src/models/: __init__.py
src/parser/: Parser.py  __init__.py
src/utils/: __init__.py  load_svg.py
src/visualizer/: __init__.py  _button.py  _constants.py  _maze.py  _menu.py  _protocol.py  _visualizer.py  _window.py  button.py  manager.py  visualizer.py
src/visualizer/maze/: __init__.py  _maze.py  _movement.py  _rendering.py  _sprites.py  _sprites_loader.py
src/visualizer/ui/: __init__.py  _button.py
src/visualizer/view/: _maze.py  _menu.py
